--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <!-- Include ECharts from a CDN -->
   <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
 </head>
+  <body>
+    <h1>Homework 5</h1>
+    <div><a href="page1.php">Page 1</a></div>
+    <div><a href="page2.php">Page 2</a></div>
+    <div><a href="page3.php">Page 3</a></div>
+    <div><a href="page4.php">Page 4</a></div>
+    <div><a href="page5.php">Page 5</a></div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 <body>
   <!-- Chart container with background color for visibility testing -->
   <div id="main" style="width: 600px; height: 400px; background-color: #f0f0f0;"></div>
